--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "password-manager",
   "version": "1.0.0",
-  "description": "Simple NodeJS Application",
+  "description": "Simple NodeJS Application for password management locally.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/RajanJS/Password_Manager/issues"
   },
-  "homepage": "https://github.com/RajanJS/Password_Manager#readme"
+  "homepage": "https://github.com/RajanJS/Password_Manager#readme",
+  "dependencies": {
+    "node-persist": "0.0.8",
+    "yargs": "^3.15.0"
+  }
 }
