--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/RajanJS/Password_Manager#readme",
   "dependencies": {
+    "crypto-js": "^3.1.5",
     "node-persist": "0.0.8",
     "yargs": "^3.15.0"
   }
